processed raw data

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -83555,8 +83555,8 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "RAW_PATH = r\"C:\\\\Users\\ADITYA DIXIT\\Desktop\\SIH\\AI-Driven-Unified-Data-Platform-for-Oceanographic-Data\\dataset_extracted\\\\Raw\\\\CMLRE dataset\"\n",
-    "PROCESSED_PATH = r\"C:\\\\Users\\ADITYA DIXIT\\Desktop\\SIH\\AI-Driven-Unified-Data-Platform-for-Oceanographic-Data\\dataset_extracted\\\\Processed\\\\CMLRE dataset\"\n",
+    "RAW_PATH = r\"C:\\\\Users\\ADITYA DIXIT\\Desktop\\SIH\\AI-Driven-Unified-Data-Platform-for-Oceanographic-Data\\dataset_extracted\\\\Raw\\\\AngriaBankData\"\n",
+    "PROCESSED_PATH = r\"C:\\\\Users\\ADITYA DIXIT\\Desktop\\SIH\\AI-Driven-Unified-Data-Platform-for-Oceanographic-Data\\dataset_extracted\\\\Processed\\\\AngriaBankData\"\n",
     "def extract():\n",
     "    base_path = Path(RAW_PATH)\n",
     "    file_path = base_path / \"occurrence.txt\"\n",
@@ -83564,11 +83564,11 @@
     "    df = pd.read_csv(file_path, sep = \"\\t\", low_memory=False)\n",
     "    pd.set_option('display.max_rows', None)  # show all rows\n",
     "    return df\n",
-    "def transform():\n",
+    "'''def transform():\n",
     "    columns_to_keep = ['id','individualCount','maximumDepthinMeters','decimalLatitude','decimalLongitude','dateIdentified','scientificName']\n",
     "    df = df[columns_to_keep].dropna()\n",
     "    return df\n",
-    "def pipeline():\n",
+    "def pipeline(): '''\n",
     "    "
    ]
   },
